Swagger+Insert User&Validate User details
