# src/models/user.js
@@ -1,19 +1,18 @@
-const { STRING, CHAR } = require("sequelize");
+const { STRING, CHAR,ENUM } = require("sequelize");
 const sequelize = require("../db/database");
 
 const User = sequelize.define(
-    "users",
-    {
-      user_name: STRING,
-      user_type: CHAR,
-      email_id: STRING,
-      contact_no: STRING
-    }
-  );
-  
-  User.sync().then(() => {
-    console.log('User table created')
-  });
+  "users",
+  {
+    user_name:{type: STRING,allowNull:false,unique:true,primaryKey: true},
+    user_type: {type: ENUM('S', 'C','P'),allowNull:false},
+    email_id: {type: STRING,allowNull:false,unique:true},
+    contact_no: {type: STRING,allowNull:false}
+  }
+);
 
+User.sync({force: true}).then(() => {
+  console.log('User table created')
+});
 
-  module.exports=User
+module.exports = User
