# src/swagger.json
@@ -2,8 +2,8 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "Yet Another Node.js Blogg Application API",
-    "description": "Yet Another Node.js Blogg Application API",
+    "title": "BODHI USER SERVICE",
+    "description": "This service is used to manage users of BODHI Application ",
     "license": {
       "name": "MIT",
       "url": "https://opensource.org/licenses/MIT"
@@ -41,6 +41,31 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Insert users into system",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "insertUser",
+        "produces": "application/xml,application/json",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": "true",
+            "description": "Enter user"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Users"
+            }
+          }
+        }
       }
     }
   },
@@ -51,18 +76,18 @@
         "_id"
       ],
       "properties": {
-        "_id": {
+        "user_name": {
           "type": "string",
           "uniqueItems": true
         },
-        "email": {
+        "user_type": {
           "type": "string",
           "uniqueItems": true
         },
-        "lastName": {
+        "email_id": {
           "type": "string"
         },
-        "firstName": {
+        "contact_no": {
           "type": "string"
         }
       }
